# tigerbeetle-manager

./: .dockerignore  .gitignore  CLAUDE.md  Cargo.toml  Dockerfile  README.md  docker-compose.yml
.github/workflows/: docker.yml  release-bin.yml
crates/compressor/: Cargo.toml
crates/compressor/src/: error.rs  importer.rs  lib.rs  plan.rs
crates/manager/: Cargo.toml
crates/manager-node/: Cargo.toml  build.rs
crates/manager-node/src/: grpc_service.rs  lib.rs  main.rs
crates/manager/src/: backup.rs  error.rs  lib.rs  process.rs
crates/reader/: Cargo.toml
crates/reader/src/: block.rs  error.rs  layout.rs  lib.rs  manifest.rs  reader.rs  superblock.rs  types.rs
docs/: client-server-protocol.md  rotate-archive-impl-plan.md  sync-job-plan.md  tigerbeetle-data-file-analysis.md  tigerbeetle-replica-sync.md
examples/read-accounts/: Cargo.toml
examples/read-accounts/src/: main.rs
examples/read-transfers/: Cargo.toml
examples/read-transfers/src/: main.rs
proto/: manager.proto
tigerbeetle-manager-dashboard/: .dockerignore  .env.example  CLAUDE.md  Dockerfile  README.md  eslint.config.mjs  package-lock.json  package.json  pnpm-lock.yaml
tigerbeetle-manager-dashboard/src/app/: layout.tsx  page.tsx
tigerbeetle-manager-dashboard/src/app/api/logs/[nodeId]/: route.ts
tigerbeetle-manager-dashboard/src/app/api/migration/execute/: route.ts
tigerbeetle-manager-dashboard/src/app/api/trpc/[trpc]/: route.ts
tigerbeetle-manager-dashboard/src/app/nodes/[nodeId]/: page.tsx
tigerbeetle-manager-dashboard/src/server/: grpc-client.ts  nodes.ts  trpc.ts
tigerbeetle-manager-dashboard/src/server/routers/: example.ts  manager.ts  root.ts
tigerbeetle-manager-dashboard/src/trpc/: client.ts  provider.tsx
