[workspace]
resolver = "2"
members = [
    "crates/*",
    "examples/*",
]

[workspace.package]
version = "0.1.0"
edition = "2024"
rust-version = "1.85"
authors = ["tiktuzki"]
license = "MIT/Apache-2.0"

[workspace.lints]
rust.missing_debug_implementations = "warn"
rust.missing_docs = "warn"
rust.rust_2018_idioms = { level = "deny", priority = -1 }
rust.unreachable_pub = "warn"
rust.unused_must_use = "deny"
rustdoc.all = "warn"

[workspace.dependencies]
# Error handling
anyhow = "1"
thiserror = "2"

# CLI
clap = { version = "4", features = ["derive"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"

# Async
tokio = { version = "1", features = ["full"] }
tokio-stream = "0.1"
async-trait = "0.1"
futures = "0.3"

# Web / HTTP
axum = "0.8"
axum-swagger-ui = "0.3"
tower = "0.5"
reqwest = { version = "0.12", features = ["json"] }
surf = "2"
async-sse = "5"
async-nats = "0"

# OpenAPI / Docs
aide = "0"
utoipa = { version = "5", features = ["axum_extras"] }
utoipa-swagger-ui = { version = "9", features = ["axum"] }
utoipa-axum = "0"
utoipa-redoc = { version = "6", features = ["axum"] }
utoipa-rapidoc = { version = "6", features = ["axum"] }
utoipa-scalar = { version = "0", features = ["axum"] }

# Logging / Tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter", "json"] }
tracing-appender = "0.2"
console-subscriber = "0.4"
log = "0.4"
env_logger = "0.11"

# Config / Environment
dotenvy = "0.15"
config = "0.15"
env-file-reader = "0"

# File / Filesystem
walkdir = "2"
fs_extra = "1"
tempfile = "3"
zstd = "0.13"

# AWS
aws-config = { version = "1", features = ["behavior-version-latest"] }
aws-sdk-s3 = "1"

# Crypto / Signing
sha2 = "0"
rand = "0"
rand_chacha = "0"
hex = "0.4"
digest = "0"
cggmp24 = { version = "0.7.0-alpha.1", features = ["curve-secp256k1", "state-machine", "hd-wallet"] }
givre = { version = "0", features = ["all-ciphersuites", "cggmp21-keygen", "spof", "hd-wallet", "full-signing", "serde"] }
key-share = { version = "0", features = ["udigest", "serde", "hd-wallet"] }
round-based = { version = "0", features = ["derive", "sim", "state-machine"] }
generic-ec = "0"
derivation-path = "0"

# Blockchain
alloy = { version = "1", features = ["full"] }
solana-client = "3"
solana-sdk = "3"
solana-system-interface = "2"
solana-compute-budget-interface = "3"
solana-commitment-config = { version = "3", features = ["serde"] }

# Utilities
once_cell = "1"
uuid = { version = "1", features = ["v4"] }
base64 = "0.22"
bytes = "1"
chrono = { version = "0.4", features = ["serde"] }
regex = "1"
paste = "1"
std-ext = "0.3"

# gRPC
tonic = "0.12"
tonic-build = "0.12"
tonic-web = "0.12"
prost = "0.13"
prost-types = "0.13"
async-stream = "0.3"

# Cron scheduling
tokio-cron-scheduler = "0.13"

# Dyson crates
dyson_http = "0.1"
dyson_log = "0.1"
dyson_boot = "0.1"

# Testing
envtestkit = "1"
criterion = "0"

# Internal crates
tb-reader = { path = "crates/reader", package = "tigerbeetle-manager-reader" }
tb-compressor = { path = "crates/compressor", package = "tigerbeetle-manager-compressor" }
tb-manager = { path = "crates/manager", package = "tigerbeetle-manager" }
tb-manager-server = { path = "crates/manager-server", package = "tigerbeetle-manager-server" }
tb-manager-node = { path = "crates/manager-node", package = "tigerbeetle-manager-node" }
