[package]
name = "tigerbeetle-manager-node"
description = "TigerBeetle manager node — CLI wrapping a single TigerBeetle instance with gRPC API"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true

[[bin]]
name = "tb-manager-node"
path = "src/main.rs"

[dependencies]
tb-manager = { workspace = true }
tb-reader = { workspace = true }

# CLI
clap = { workspace = true }

# Async
tokio = { workspace = true }

# gRPC
tonic = { workspace = true }
tonic-web = { workspace = true }
prost = { workspace = true }
prost-types = { workspace = true }
async-stream = { workspace = true }
tokio-stream = { workspace = true }

# Logging
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

# Error handling
anyhow = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# Time
chrono = { workspace = true }

[build-dependencies]
tonic-build = { workspace = true }

[lints]
workspace = true
