[package]
name = "read-transfers"
description = "Example: read all transfers from a TigerBeetle data file"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true

[[bin]]
name = "read-transfers"
path = "src/main.rs"

[dependencies]
tb-reader = { workspace = true }

[lints]
workspace = true
